Fixed user headline spacing

--- a/app/assets/stylesheets/site/sections/users.css.scss
+++ b/app/assets/stylesheets/site/sections/users.css.scss
@@ -17,7 +17,7 @@
     }
 
     &__headline {
-        margin-bottom: 0;
+        margin-bottom: 0 !important;
 
         color: $text-muted;
     }
